--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 **/node_modules/
+
+#ou 
+
+# aula-1/node_modules/
+# aula-2/node_modules/
+# aula-3/node_modules/
+# aula-4/node_modules/
+# aula-5/node_modules/
+# aula-4.1/node_modules/
+# .DS_Store
