--- a/aula-6/package.json
+++ b/aula-6/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "aula-5",
+  "name": "aula-6",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -12,13 +13,6 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui": "^5.4.2",
     "swagger-ui-express": "^5.0.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1",
-    "sucrase": "^3.34.0"
-  },
-  "description": ""
+  }
 }
