ajuste de codigo

--- a/aula-5/.env
+++ b/aula-5/.env
@@ -1,7 +1,8 @@
 # S3 da AWS
-BUCKET = "my-bucket" 
-KEY = "file.txt"
+BUCKET = "my-bucket"   #pasta salva na aws lambda
+KEY = "file.txt"       #arquivo salvo da aws lambda
 
+#API
 PORT = "3000"
 DATABASE_HOST = "teste"
 DATABASE_PASS = "teste"
